[package]
name = "wiki-host"
version = "0.1.0"
authors = ["Stanislav Panferov <fnight.m@gmail.com>"]
edition = "2018"

[dependencies]
actix-web="*"
actix="*"
wiki-log = { path = "../wiki-log" }
wiki-db = { path = "../wiki-db" }
wiki-vm = { path = "../wiki-vm" }
wiki-fs = { path = "../wiki-fs" }
url="1.7"
futures-preview = "0.3.0-alpha.10"
clap="*"
failure="^0.1.3"

[dependencies.config]
version = "0.9"
default-features = false
features = ["yaml"]