[package]
name = "wiki-host"
version = "0.1.0"
authors = ["Stanislav Panferov <fnight.m@gmail.com>"]
edition = "2018"

[dependencies]
actix-web="0.7"
actix="0.7"
url="1"
futures = "0.1"
clap="2"
failure="0.1"
slog="2"
slog-json="2"
slog-term="2"
slog-async="2"
rocksdb="0"
tantivy="0"
serde="1"
serde_derive="1"
serde_yaml="0.8"
serde_json="1"
sha2="0.8"
notify="4"
walkdir="2"
lazy_static="1.2"
pulldown-cmark = { git = "https://github.com/raphlinus/pulldown-cmark", branch = "new_algo" }
typed-html="*"

[dependencies.config]
version = "0.9"
default-features = false
features = ["yaml"]